UCL-341 Fix FieldSet spacing

--- a/src/components/Form/Fieldset/Fieldset.module.scss
+++ b/src/components/Form/Fieldset/Fieldset.module.scss
@@ -18,7 +18,7 @@
 
 .fieldset {
   border: 0;
-  padding: 1rem variables.$form-element-horizontal-padding-mobile;
+  padding: variables.$form-element-horizontal-padding-mobile;
   border-radius: 0.5rem;
   margin: 0;
 
